test/classes/delete-free/nil-checking/nilcheck-emptied.good
nilcheck-emptied.chpl:8: In function 'bad1':
nilcheck-emptied.chpl:11: error: mention of non-nilable variable after ownership is transferred out of it
nilcheck-emptied.chpl:10: note: ownership transfer occurred here
nilcheck-emptied.chpl:15: In function 'bad2':
nilcheck-emptied.chpl:18: error: mention of non-nilable variable after ownership is transferred out of it
nilcheck-emptied.chpl:17: note: ownership transfer occurred here
nilcheck-emptied.chpl:22: In function 'bad3':
nilcheck-emptied.chpl:25: error: mention of non-nilable variable after ownership is transferred out of it
nilcheck-emptied.chpl:24: note: ownership transfer occurred here
nilcheck-emptied.chpl:25: error: mention of non-nilable variable after ownership is transferred out of it
nilcheck-emptied.chpl:24: note: ownership transfer occurred here
nilcheck-emptied.chpl:8: In function 'bad1':
nilcheck-emptied.chpl:11: error: Illegal use of dead value
nilcheck-emptied.chpl:10: note: 'x' is dead due to ownership transfer here
nilcheck-emptied.chpl:15: In function 'bad2':
nilcheck-emptied.chpl:18: error: Illegal use of dead value
nilcheck-emptied.chpl:17: note: 'x' is dead due to ownership transfer here
nilcheck-emptied.chpl:22: In function 'bad3':
nilcheck-emptied.chpl:25: error: Illegal use of dead value
nilcheck-emptied.chpl:24: note: 'x' is dead due to ownership transfer here
